...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Dsg-4v-3r3">
                                <rect key="frame" x="20" y="104" width="335" height="229"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email@domain.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fc2-5U-SgN">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="Email Address"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
                                        <connections>
                                            <outlet property="delegate" destination="cec-lV-Uxr" id="sau-q6-QYv"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZfH-6a-4gy">
                                        <rect key="frame" x="0.0" y="38" width="335" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="Password"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="next" secureTextEntry="YES"/>
                                        <connections>
...
                                        <rect key="frame" x="0.0" y="76" width="335" height="44"/>
                                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="kcv-1b-VpP"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="tappedSubmit" destination="cec-lV-Uxr" eventType="touchUpInside" id="Awt-tQ-BCo"/>
                                        </connections>
                                    </button>
...
